reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__scheduler.rs_line_1826_col_9.log

*** crates/tracewake-core/src/scheduler.rs:1826:9: replace no_human::build_intention_continued_event -> EventEnvelope with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/scheduler.rs
+++ replace no_human::build_intention_continued_event -> EventEnvelope with Default::default()
@@ -1818,64 +1818,17 @@
     fn build_intention_continued_event(
         process_id: &ProcessId,
         active: &Intention,
         window: &DayWindow,
         proposal: &Proposal,
         content_manifest_id: &ContentManifestId,
         ordinary_event: &EventEnvelope,
     ) -> EventEnvelope {
-        let mut event = EventEnvelope::new_caused_v1(
-            EventId::new(format!(
-                "event.intention_continued.{}.{}",
-                active.actor_id.as_str(),
-                window.window_id
-            ))
-            .unwrap(),
-            EventKind::IntentionContinued,
-            0,
-            0,
-            window.start_tick,
-            OrderingKey::new(
-                window.start_tick,
-                SchedulePhase::NoHumanProcess,
-                SchedulerSourceId::Process(process_id.clone()),
-                ProposalSequence::new(0),
-                ActionId::new("intention_continued").unwrap(),
-                vec![
-                    active.actor_id.as_str().to_string(),
-                    active.intention_id.as_str().to_string(),
-                ],
-                format!(
-                    "intention_continued:{}:{}",
-                    active.actor_id.as_str(),
-                    window.window_id
-                ),
-            ),
-            content_manifest_id.clone(),
-            vec![EventCause::Event(ordinary_event.event_id.clone())],
-        )
-        .unwrap();
-        event.actor_id = Some(active.actor_id.clone());
-        event.process_id = Some(process_id.clone());
-        event.proposal_id = Some(proposal.proposal_id.clone());
-        event.participants = vec![active.actor_id.to_string(), active.intention_id.to_string()];
-        event.payload = vec![
-            PayloadField::new("actor_id", active.actor_id.as_str()),
-            PayloadField::new("intention_id", active.intention_id.as_str()),
-            PayloadField::new("status", "active"),
-            PayloadField::new("reason", "ordinary_follow_on_action_committed"),
-            PayloadField::new("progress_tick", window.start_tick.value().to_string()),
-            PayloadField::new("current_step", proposal.action_id.as_str()),
-            PayloadField::new("follow_on_action_id", proposal.action_id.as_str()),
-            PayloadField::new("follow_on_event_id", ordinary_event.event_id.as_str()),
-            PayloadField::new("window_id", window.window_id.as_str()),
-        ];
-        event.effects_summary = "active intention continued through ordinary action".to_string();
-        event
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     #[allow(clippy::too_many_arguments)]
     fn append_routine_step_events_after_proposal(
         log: &mut EventLog,
         agent_state: &mut AgentState,
         process_id: &ProcessId,
         actor_id: &ActorId,


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): couldn't read metadata for file `target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `EventEnvelope: Default` is not satisfied
    --> crates/tracewake-core/src/scheduler.rs:1826:9
     |
1826 |         Default::default() /* ~ changed by cargo-mutants ~ */
     |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `EventEnvelope`
    --> crates/tracewake-core/src/events/envelope.rs:717:1
     |
 717 | pub struct EventEnvelope {
     | ^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `envelope::EventEnvelope: Default` is not satisfied
    --> crates/tracewake-core/src/scheduler.rs:1826:9
     |
1826 |         Default::default() /* ~ changed by cargo-mutants ~ */
     |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `envelope::EventEnvelope`
    --> crates/tracewake-core/src/events/envelope.rs:717:1
     |
 717 | pub struct EventEnvelope {
     | ^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
